support batches and manual implementation of outbox draining